Fixing layout issues

--- a/themes/monster/source/css/style.css
+++ b/themes/monster/source/css/style.css
@@ -12,6 +12,12 @@ body {
 	-webkit-font-smoothing: antialiased;
 	overflow-x: hidden;
 }
+
+.body-section{
+	margin-top: 40px;
+    margin-left: 10px;
+}
+
 input,textarea {
 	-webkit-font-smoothing: antialiased;
 }
@@ -1388,12 +1394,11 @@ article.post .post-inner iframe {
 	overflow: hidden;
 	position: absolute;
 	top: 0;
-	left: -80px;
 }
 .post-author img {
 	text-align: center;
-	height: 70px;
-	width: 70px;
+	height: 60px;
+	width: 60px;
 }
 /* Post 3 */
 .post-3 .post-type,.post-3 .post-author {
